# SimpleRobotSimulatorRos2

./: .gitignore  Dockerfile  README.md
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/action/: BatteryCharge.action  MoveToTarget.action
src/robot_interfaces/msg/: BatteryStatus.msg  RobotStatus.msg
src/robot_interfaces/srv/: EnergyCheck.srv
src/robot_simple/: CMakeLists.txt  package.xml
src/robot_simple/include/robot_simple/: battery.hpp  robot.hpp
src/robot_simple/launch/: robot_system.launch.py
src/robot_simple/src/: battery.cpp  robot.cpp  robot_system.cpp
